# Voxify

./: .gitignore  README.md
Back/: .env.example  pyproject.toml  requirements.txt
Back/alembic/: env.py
Back/alembic/versions/: 20260717_0001_initial_schema.py  20260717_0002_transcription_text.py
Back/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  security.py
Back/app/routers/: arquivo_upload.py  autenticacao.py  usuarios.py
Back/app/services/: audio_processor.py  supabase.py  transcription_service.py  upload_audio.py
Front/: Dashboard.html  index.html  login.html  registro.html
Front/script/: api.js  auth.js  config.js  dashboard.js  login.js  register.js  registro.js  session.js  upload.js
Front/style/: base_style.css  dashboard.css  index.css  login.css  registro.css  utils.css  variables.css
